Crear tema para pantallas de onboarding que tengan estilos particulares como ocultar actionbar
Cancelar temporalmente configuración para presentar pantalla de SignUp eliminando histórico de navegación

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:theme="@style/AppTheme.Base">
         <activity android:name=".MainActivity" />
         <activity android:name=".SignUpActivity"
+            android:theme="@style/AppOnboardingTheme"
             />
         <activity android:name=".OnboardingActivity"
+            android:theme="@style/AppOnboardingTheme"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
