Crear nueva activity con fragment para presentar detalle de punto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,23 @@
     package="edu.dami.guiameapp">
 
     <application
+        android:name=".GuiameApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Base"
-        android:name=".GuiameApp">
+        android:theme="@style/AppTheme.Base">
+        <activity android:name=".PointProfileActivity"></activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".SignUpActivity"
-            android:theme="@style/AppOnboardingTheme"
-            />
-        <activity android:name=".OnboardingActivity"
-            android:theme="@style/AppOnboardingTheme"
-            >
+        <activity
+            android:name=".SignUpActivity"
+            android:theme="@style/AppOnboardingTheme" />
+        <activity
+            android:name=".OnboardingActivity"
+            android:theme="@style/AppOnboardingTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
