--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Base">
-        <activity android:name=".PointProfileActivity"></activity>
+        <activity android:name=".PointProfileActivity"
+            android:parentActivityName=".MainActivity"
+            />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".SignUpActivity"
@@ -19,7 +21,6 @@
             android:theme="@style/AppOnboardingTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
