--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
     <uses-feature android:name="android.hardware.camera"
         android:required="false" />
 
+    <!--
+    Para obtener una ubicación aproximada (1 manzana)
+    Para una ubicacion mas precisa usar ACCESS_FINE_LOCATION
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:name=".GuiameApp"
         android:allowBackup="true"
@@ -12,6 +18,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Base">
+
+        <!--
+        Aparentemente este código ya no es necesario, al menos según la documentación oficial.
+        -->
+        <!--
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        -->
+
         <activity android:name=".PointProfileActivity"
             android:parentActivityName=".MainActivity"
             />
