--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'com.android.application'
 
+// Crea una variable que representa el archivo keystore.properties en la raiz del proyecto
+def ksPropsFile = rootProject.file("keystore.properties")
+// Instanciar variable que expondrá los datos contenidos en el archivo (keystorePropertiesFile)
+def ksProps = new Properties()
+// Cargar los datos del archivo en la variable keystoreProperties
+ksProps.load(new FileInputStream(ksPropsFile))
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -16,10 +23,20 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            keyAlias ksProps['keyAlias']
+            keyPassword ksProps['keyPassword']
+            storeFile file(ksProps['storeFile'])
+            storePassword ksProps['storePassword']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
